--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,16 @@
+2007-08-01  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/getsysstats.c (__get_nprocs): Using
+	/proc is faster and sufficient.  /sys is still needed for
+	__get_nprocs_conf.
+
+2007-08-01  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/unix/sysv/linux/i386/syscalls.list (fallocate): Add fallocate
+	syscall as __fallocate64.
+	* sysdeps/unix/sysv/linux/i386/posix_fallocate.c: New file.
+	* sysdeps/unix/sysv/linux/i386/posix_fallocate64.c: New file.
+
 2007-07-30  Jakub Jelinek  <jakub@redhat.com>
 
 	* stdlib/tst-strtod2.c (do_test): Use %tu in fmt string for ptrdiff_t
