--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,40 @@
+2007-08-02  Ulrich Drepper  <drepper@redhat.com>
+
+	* io/Makefile (aux): Add have_o_cloexec.
+	* include/fcntl.h: Declare __have_o_cloexec.
+	* io/have_o_cloexec.c: New file.
+	* sysdeps/unix/opendir.c (__opendir): Use O_CLOEXEC is available.
+	(__alloc_dir): If O_CLOEXEC has been used, don't duplicate the
+	fcntl call if not necessary.
+	* login/utmp_file.c (setutent_file): Use __have_o_cloexec instead
+	of local variable.
+
+	* sysdeps/unix/opendir.c (__alloc_dir): Don't initialize ->data.
+	Avoid memset, add explicit initialization.
+	* sysdeps/unix/dirstream.h (struct __dirstream): Move data elemtn
+	to the end and change into zero-sized array.
+	Move lock member to fill a hole on 64-bit platforms.
+
+	* stdlib/stdlib.h: Remove __strto*_internal prototypes and strto*
+	inline functions.
+	* include/stdlib.h: Add __strto*_internal prototypes here.
+	* wcsmbs/wchar.h: Remove __wcsto*_internal prototypes and wcsto*
+	inline functions.
+	* include/wchar.h: Add __wcsto*_internal prototypes.
+	* sysdeps/generic/inttypes.h: No need to protect the declaration
+	of the __strto*_internal and __wcsto*_internal members here.
+
+	* rt/mqueue.h: Change const to __const and add nonnull attributes.
+
+2007-08-02  Roland McGrath  <roland@redhat.com>
+
+	* posix/Makefile ($(inst_libexecdir)/getconf): Make hard links to
+	$(inst_bindir)/getconf if possible.
+
+	* posix/Makefile ($(objpfx)getconf.speclist): New target.
+	(generated): Add it.
+	($(inst_libexecdir)/getconf): Use it.
+
 2007-08-01  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/getsysstats.c (__get_nprocs): Using
