--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,27 @@
+2007-08-03  Ulrich Drepper  <drepper@redhat.com>
+
+	* rt/aio.h: Add __nonnull attributes.
+
+2007-08-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* stdlib/strtod_l.c (____STRTOF_INTERNAL): Properly handle -0.
+	* stdlib/Makefile (tests): Add tst-strtod5.
+	(tst-strtod5-ENV): New.
+	* stdlib/tst-strtod5.c: New file.
+
+	* intl/dcigettext.c (_nl_find_msg): Free encoding if __gconv_open
+	failed.
+	* intl/finddomain.c (_nl_find_domain): Free normalized_codeset
+	on failure.
+
+	* elf/dl-load.c (decompose_rpath): Free copy if result couldn't be
+	allocated.
+
+2007-08-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* rt/mqueue.h (mq_timedreceive, mq_timedsend): Fix nonnull argument
+	numbers.
+
 2007-08-02  Ulrich Drepper  <drepper@redhat.com>
 
 	* io/Makefile (aux): Add have_o_cloexec.
