--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,21 @@
+2007-08-04  Roland McGrath  <roland@redhat.com>
+
+	* posix/Makefile ($(objpfx)getconf.speclist): Fix typo.
+
+2007-08-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* io/bits/fcntl2.h (open, open64, openat, openat64): Add
+	__extension__ around the whole statement expression.
+
+2007-08-04  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/opendir.c (__alloc_dir): Correct order of DIR
+	elements during initialization.
+
+	* po/pl.po: Updated translation from translation team.
+	* po/tr.po: Likewise.
+	* po/nl.po: Likewise.
+
 2007-08-03  Ulrich Drepper  <drepper@redhat.com>
 
 	* rt/aio.h: Add __nonnull attributes.
