--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,13 @@
+2007-08-09  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/x86_64/sched_getcpu.S: Use correct
+	register in test for error.
+
+	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h (O_CLOEXEC): Define.
+	* sysdeps/unix/sysv/linux/alpha/bits/fcntl.h (O_CLOEXEC): Likewise.
+
+	* po/sv.po: Update from translation team.
+
 2007-08-06  Roland McGrath  <roland@redhat.com>
 
 	* include/stdlib.h: Add libc_hidden_proto for strto*, __strto*_l.
