--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,95 @@
+2007-08-12  Ulrich Drepper  <drepper@redhat.com>
+
+	* elf/dl-dst.h: No need for _dl_dst_count, _dl_dst_substitute,
+	and _dl_get_origin defines anymore.
+
+	* sysdeps/unix/sysv/linux/clock_gettime.c (maybe_syscall_gettime_cpu):
+	Build fix for systems which might lack POSIX timer support.
+
+	* sysdeps/unix/sysv/linux/x86_64/libc-start.c
+	(_libc_vdso_platform_setup): Mangle function pointers before storing
+	them.
+	* sysdeps/unix/sysv/linux/x86_64/sysdep.h (INLINE_VSYSCALL):
+	Demangle vdso pointer before use.
+	(INTERNAL_VSYSCALL): Likewise.
+
+	* elf/cache.c (primes): Mark as const.
+	Noted by Roland McGrath.
+
+2007-08-01  Andreas Jaeger  <aj@suse.de>
+	    Jakub Jelinek  <jakub@redhat.com>
+
+	* elf/ldconfig.c (opt_ignore_aux_cache): Add new option.
+	(options): Add option.
+	(parse_opt): Handle option.
+	(manual_link): Adjust process_file caller.  Call implicit_soname.
+	(search_dir): Formatting.  Use and populate auxiliary cache.
+	(main): Load and save auxiliary cache.
+	* elf/readlib.c (process_file): Add stat_buf argument.  Pass struct
+	stat64 from fstat64 to caller.
+	(implicit_soname): New function.
+	* elf/readelflib.c (process_elf_file): If DT_SONAME is not present,
+	leave *soname as NULL.
+	* elf/cache.c: Include libgen.h.
+	(print_entry, print_cache, compare, save_cache, add_to_cache):
+	Formatting and cleanups.
+	(aux_cache_entry_id, aux_cache_entry, aux_cache_file_entry,
+	aux_cache_file): New structures.
+	(AUX_CACHEMAGIC): Define.
+	(primes): New array.
+	(aux_hash_size, aux_hash): New variables.
+	(aux_cache_entry_id_hash, nextprime, init_aux_cache,
+	search_aux_cache, insert_to_aux_cache, add_to_aux_cache,
+	load_aux_cache, save_aux_cache): New functions.
+	* sysdeps/generic/ldconfig.h (_PATH_LDCONFIG_AUX_CACHE): Define.
+	(init_aux_cache, search_aux_cache, add_to_aux_cache,
+	load_aux_cache, save_aux_cache, implicit_soname): New prototypes.
+	(process_file): Adjust prototype.
+
+2007-08-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/unix/sysv/linux/ia64/bits/sigcontext.h: Include stddef.h
+	with __need_size_t.
+
+2007-08-12  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/dl-vdso.c (_dl_vdso_vsym): Expect
+	r_found_version structure as second parameter.
+	* sysdeps/unix/sysv/linux/dl-vdso.h (PREPARE_VERSION): Define.
+	(_dl_vdso_vsym): Change type of second parameter accordingly.
+	* sysdeps/unix/sysv/linux/x86-64/libc-start.c
+	(_libc_vdso_platform_setup): Adjust.
+	* sysdeps/unix/sysv/linux/powerpc/libc-start.c
+	(_libc_vdso_platform_setup): Likewise.
+
+	* sysdeps/unix/sysv/linux/powerpc/dl-vdso.c: Move to...
+	* sysdeps/unix/sysv/linux/dl-vdso.c: ...here.
+	* sysdeps/unix/sysv/linux/powerpc/dl-vdso.h: Move to...
+	* sysdeps/unix/sysv/linux/dl-vdso.h: ...here.
+	* csu/libc-start.c: Pretty printing.
+	Use VDSO_SETUP if defined.
+	* sysdeps/unix/sysv/linux/powerpc/libc-start.c: Define VDSO_SETUP
+	and let generic code call into _libc_vdso_platform_setup.
+	* sysdeps/unix/sysv/linux/x86_64/libc-start.c: New file.
+	* sysdeps/unix/sysv/linux/x86_64/bits/libc-vdso.h: New file.
+	* sysdeps/unix/sysv/linux/x86_64/sysdep.h: Pretty printing.
+	Define INLINE_VSYSCALL and INTERNAL_VSYSCALL.
+	* sysdeps/unix/sysv/linux/x86_64/Versions: Export __vdso_clock_gettime
+	for GLIBC_PRIVATE.
+	* sysdeps/unix/sysv/linux/x86_64/Makefile [subdir=elf]
+	(sysdep_rountines): Add dl-vdso.
+
+	* sysdeps/unix/sysv/linux/powerpc/Makefile: Use sysdep_routines instead
+	of routines.
+
+	* sysdeps/unix/sysv/linux/powerpc/bits/libc-vdso.h: Add
+	attribute_hidden to __vdso_gettimeofday prototype.
+
+2007-08-12  Roland McGrath  <roland@redhat.com>
+
+	* manual/stdio.texi (Variable Arguments Output): Fix xref to gcc manual.
+	From: Karl Berry <karl@freefriends.org>.
+
 2007-08-11  Ulrich Drepper  <drepper@redhat.com>
 
 	* elf/dl-misc.c (_dl_sysdep_read_whole_file): We really don't need
