--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,16 @@
+2007-08-23  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): Correctly
+	align stack for call if pltexit is to be used.
+
+	[BZ #3924]
+	* sysdeps/i386/dl-trampoline.S (_dl_runtime_profile): Correctly
+	align for function call in case pltexit has to be called later.
+
+	* sysdeps/i386/dl-trampoline.S (_dl_runtime_resolve): Avoid
+	implicit atomic operation when storing function pointer.
+	(_dl_runtime_profile): Likewise.
+
 2007-08-17  Jakub Jelinek  <jakub@redhat.com>
 
 	* nis/nis_table.c (nis_list): Don't fail if __follow_path returned
