--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,29 @@
+2007-08-28  Ulrich Drepper  <drepper@redhat.com>
+
+	* nscd/connections.c (send_ro_fd): Also transfer file size.
+	* nscd/nscd_helper.c (get_mapping): If nscd also transfers the
+	file size don't call fstat.
+
+	* nscd/nscd_helper.c (get_mapping): Avoid the pread call, just go
+	ahead and map the file.  This should always be correct and we can
+	catch problems later.
+
+2007-08-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* libio/bits/stdio2.h (__fread_chk, __fread_unlocked_chk): New
+	prototypes.
+	(__fread_alias, __fread_unlocked_alias): New aliases.
+	(fread): New extern inline.
+	(fread_unlocked): Likewise.  Undef macro before definition of
+	the inline function.
+	* debug/Makefile (routines): Add fread_chk and fread_u_chk.
+	(CFLAGS-fread_chk.c, CFLAGS-fread_u_chk.c): Add.
+	* debug/Versions (libc): Export __fread_chk@@GLIBC_2.7
+	and __fread_unlocked_chk@@GLIBC_2.7.
+	* debug/fread_chk.c: New file.
+	* debug/fread_u_chk.c: New file.
+	* debug/tst-chk1.c (do_test): Add fread and fread_unlocked tests.
+
 2007-08-27  Jakub Jelinek  <jakub@redhat.com>
 
 	* sysdeps/unix/sysv/linux/syscalls.list
