--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,10 @@
+2007-09-30  Ulrich Drepper  <drepper@redhat.com>
+
+	* locale/programs/ld-collate.c (collate_finish): Compare all bytes
+	of section order.
+
+	* po/pt_BR.po: Fix typo.
+
 2007-09-29  Ulrich Drepper  <drepper@redhat.com>
 
 	* iconvdata/Makefile (modules): Add ISO8859-9E.
