--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,15 @@
+2007-10-01  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #5071]
+	* malloc/malloc.c (mremap_chunk): Avoid resizing of new block has
+	the same number of pages.
+	Patch by Tomash Brechko <tomash.brechko@gmail.com>.
+
+	* locale/programs/ld-collate.c (collate_read): After initial copy
+	statement, continue in state 0.
+
+	* include/stdio_ext.h (__fsetlocking): Define as macro.
+
 2007-09-30  Ulrich Drepper  <drepper@redhat.com>
 
 	* locale/programs/ld-collate.c (collate_finish): Compare all bytes
