--- a/fsf/trunk/libc/localedata/ChangeLog
+++ b/fsf/trunk/libc/localedata/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-01  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #4941]
+	* locales/oc_FR: Fix Thursday abday and August mon and abmon data.
+
+	* SUPPORTED (SUPPORTED-LOCALES): Add ber_MA.UTF-8.
+
+	* locales/am_ET (LC_COLLATE): Define new script after copy.
+
 2007-09-30  Ulrich Drepper  <drepper@redhat.com>
 
 	* locales/cs_SR: Removed.
@@ -20,10 +29,12 @@
 	* locales/cs_CZ: Sort lowercase before uppercase.
 
 	* locales/en_GB: Change first weekday and workday to Monday.
-	* locales/da_DK: Likewise.
-	* locales/et_EE: Likewise.
 	* locales/nb_NO: Likewise.
 	* locales/nn_NO: Likewise.
+	[BZ #4833]
+	* locales/da_DK: Likewise.
+	[BZ #4705]
+	* locales/et_EE: Likewise.
 
 	* locales/iso14651_t1_common: Add rules for Georgian.
 
