Import glibc-mainline for 2007-10-03

--- a/fsf/trunk/libc/localedata/ChangeLog
+++ b/fsf/trunk/libc/localedata/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-02  Ulrich Drepper  <drepper@redhat.com>
+
+	* charmaps/UTF-8: Fix U06FF definition.  Remove double U074A
+	definition.  Add U0B71 and U27C0 to U27CA definitions.
+
+	* de_DE.in: Adjust for correct handling of backward direction sorting.
+
+	* fr_FR.in: New file.
+	* Makefile: Add rules to run fr_FR sorting test.
+
 2007-10-01  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #4941]
