--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,16 @@
+2007-10-03  Jakub Jelinek
+
+	* string/bits/string3.h (memcpy, memmove, mempcpy, memset, bcopy,
+	bzero, strcpy, stpcpy, strncpy, strcat, strncat): Use
+	__extern_always_inline functions unconditionally, drop macros.
+
+	* misc/sys/cdefs.h (__REDIRECT_LDBL, __REDIRECT_NTH_LDBL): New macros.
+	* wcsmbs/bits/wchar2.h (__swprintf_alias, __vswprintf_alias): Use
+	__REDIRECT_NTH_LDBL macro rather than __REDIRECT_NTH.
+
+	* misc/sys/cdefs.h (__extern_always_inline): For GCC 4.3+
+	add __artificial__ attribute.
+
 2007-10-02  Ulrich Drepper  <drepper@redhat.com>
 
 	* string/strcoll_l.c (STRCOLL): Correct handling of switching from
