--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,4 +1,49 @@
-2007-10-04  Jakub Jelinek
+2007-10-05  Ulrich Drepper  <drepper@redhat.com>
+
+	* timezone/zic.c: Update from tzcode2007h.
+
+	[BZ #5063]
+	* timezone/africa: Update from tzdata2007h.
+	* timezone/antarctica: Likewise.
+	* timezone/asia: Likewise.
+	* timezone/australasia: Likewise.
+	* timezone/europe: Likewise.
+	* timezone/leapseconds: Likewise.
+	* timezone/northamerica: Likewise.
+	* timezone/southamerica: Likewise.
+	* timzeone/zone.tab: Likewise.
+
+	[BZ #5104]
+	* elf/do-lookup.h (do_lookup_x): Don't ignore STT_COMMON symbols.
+
+	[BZ #5113]
+	* string/bits/string2.h (__strdup): Cast parameters to calloc to
+	avoid warning with -Wconversion.
+	(__strndup): Likewise.
+	Patch to 50% by Christian Iseli <christian.iseli@licr.org>.
+
+	[BZ #5112]
+	* nscd/connections.c (restart): Don't resync if database is
+	disabled.  Patch mostly by Brian De Wolf <bldewolf@csupomona.edu>.
+
+	* sysdeps/gnu/netinet/tcp.h: Define TCP_MD5SIG, TCP_MD5SIG_MAXKEYLEN,
+	struct tcp_md5sig.  Extend struct tcp_info according to recent kernels.
+
+	* sysdeps/unix/sysv/linux/Makefile (sysdep_routines): Add eventfd,
+	evetnfd_read, eventfd_write.
+	* sysdeps/unix/sysv/linux/eventfd.c: New file.
+	* sysdeps/unix/sysv/linux/eventfd_read.c: New file.
+	* sysdeps/unix/sysv/linux/eventfd_write.c: New file.
+	* sysdeps/unix/sysv/linux/sys/eventfd.h: New file.
+	* sysdeps/unix/sysv/linux/Versions: Export eventfd, eventfd_read,
+	eventfd_write for GLIBC_2.7.
+
+	* sysdeps/unix/sysv/linux/Makefile (sysdep_routines): Add signalfd.
+	* sysdeps/unix/sysv/linux/signalfd.c: New file.
+	* sysdeps/unix/sysv/linux/sys/signalfd.h: New file.
+	* sysdeps/unix/sysv/linux/Versions: Export signalfd for GLIBC_2.7.
+
+2007-10-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* stdlib/msort.c: Include stdint.h.
 	(struct msort_param): New type.
@@ -22,7 +67,7 @@
 	include <features.h> now.  Include <bits/error.h> if possible.
 	* misc/bits/error.h: New file.
 
-2007-10-03  Jakub Jelinek
+2007-10-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* string/bits/string3.h (memcpy, memmove, mempcpy, memset, bcopy,
 	bzero, strcpy, stpcpy, strncpy, strcat, strncat): Use
