--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,26 @@
+2007-10-06  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #3924]
+	* sysdeps/i386/dl-trampoline.S (_dl_runtime_profile): Fix a few
+	more little bugs in creating the stack frame when pltexit has to
+	be called.
+
+	* nscd/nscd_helper.c (__nscd_cache_search): Prevent endless loops.
+	* nscd/connections.c (verify_persistent_db): Recognize circular lists.
+
+	[BZ #4407]
+	* sysdeps/ieee754/dbl-64/e_lgamma_r.c: Fix *signgamp for -0.0.
+	* sysdeps/ieee754/flt-32/e_lgammaf_r.c: Likewise.
+	* sysdeps/ieee754/ldbl-96/e_lgammal_r.c: Likewise.
+	* math/libm-test.inc: Add test for this case.
+
+	[BZ #5010]
+	* sunrpc/svc.c (struct svc_callout): Add sc_mapped element.
+	(svc_register): Initialize sc_mapped.  Set to TRUE if call to
+	map service succeeded.
+	(svc_is_mapped): New function.
+	(svc_unregister): Use it before trying to unmap service.
+
 2007-10-05  Ulrich Drepper  <drepper@redhat.com>
 
 	* timezone/zic.c: Update from tzcode2007h.
@@ -20,7 +43,7 @@
 	* string/bits/string2.h (__strdup): Cast parameters to calloc to
 	avoid warning with -Wconversion.
 	(__strndup): Likewise.
-	Patch to 50% by Christian Iseli <christian.iseli@licr.org>.
+	Half the patch by Christian Iseli <christian.iseli@licr.org>.
 
 	[BZ #5112]
 	* nscd/connections.c (restart): Don't resync if database is
