--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,46 @@
+2007-10-14  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #1140]
+	* time/tzfile.c (__tzfile_compute): Compute tzname[] values based
+	on the specified time and not the last entries in the file.  Move
+	code to determine tzname[] to...
+	(find_transition): ...here.  Add ugly guess for times before the
+	first transition.
+
+2007-10-13  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #3195]
+	* nscd/nscd_getai.c (__nscd_getai): Set errno to 0 in case we found
+	no entry.
+	* nscd/nscd_getgr.c (nscd_getgr_r): Likewise.
+	* nscd/nscd_gethst_r.c (nscd_gethst_r): Likewise.
+	* nscd/nscd_getpw_r.c (nscd_getpw_r): Likewise.
+	* nscd/nscd_getserv_r.c (nscd_getserv_r): Likewise.
+
+	* nscd/nscd_getgr_r.c (nscd_getgr_r): Optimize a bit: use simpler
+	read mechanism when there are no group members and avoid no-op
+	read syscall in this case.
+
+	[BZ #3242]
+	* nscd/nscd_helper.c (wait_on_socket): Take timeout as parameter.
+	(__readall): If reading failed due to EAGAIN error wait a bit
+	and possibly try again.
+	(__readvall): Likewise.
+
+2007-10-13  Bruno Haible  <bruno@clisp.org>
+
+	* intl/dcigettext.c (_nl_find_msg): Unlock the conversions_lock
+	when we cannot recode the message.
+
+2007-10-13  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #4359]
+	* libio/__freading.c (__freading): Don't return true for
+	write-only streams.  For read/write streams, check whether we
+	performed a read operation already.
+	* libio/Makefile (tests): Add tst-ext2.
+	* libio/tst-ext2.c: New file.
+
 2007-10-12  Ulrich Drepper  <drepper@redhat.com>
 
 	* locale/programs/repertoire.c (repertoire_read): Always free
