--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,5 +1,39 @@
 2007-10-14  Ulrich Drepper  <drepper@redhat.com>
 
+	* posix/glob.c: Reimplement link_exists_p to use fstatat64.
+
+	* posix/glob.c: Add some branch prediction throughout.
+
+	* nscd/nscd_getgr_r.c (nscd_getgr_r): Store result of successful
+	read from nscd.
+
+	* sysdeps/posix/getaddrinfo.c (struct sort_result): Add
+	service_order.
+	(rfc3484_sort): Make sure that even if qsort doesn't support
+	stable sorting out sorting here is stable by comparing service_order.
+	(getaddrinfo): Initialize service_order.
+	* posix/tst-rfc3484.c (do_test): Adjust for addition of
+	service_order field to sorting structure.
+	* posix/tst-rfc3484-2.c (do_test): Likewise.
+
+	* include/time.h: Declare __tzset_parse_tz and __tzset_compute.
+	* time/tzset.c (tzset_internal): Break TZ string parsing out into
+	__tzset_parse_tz and updating of daylight, timezone, tzname into
+	update_vars.
+	(__tz_compute): Renamed from tz_compute.  Take additional parameters.
+	(__tz_convert): Updating of tm_isdst, tm_zone, and tm_gmtoff now
+	happens in __tz_compute.
+	* time/tzfile.c (__tzfile_read): Also read TZ string.
+	(find_transition): Fold into __tzfile_compute.
+	(__tzfile_compute): For times beyond the last transition try to
+	use the TZ string.
+	* timezone/tst-timezone.c: Information in daylight and tzname does
+	change for Asia/Tokyo timezone with more concrete information.
+	Remove the test.
+
+	* include/stdio.h: Add libc_hidden_proto for ftello.
+	* libio/ftello.c: Add libc_hidden_def.
+
 	[BZ #1140]
 	* time/tzfile.c (__tzfile_compute): Compute tzname[] values based
 	on the specified time and not the last entries in the file.  Move
