--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,34 @@
+2007-10-15  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/x86_64/cacheinfo.c (__x86_64_shared_cache_size): Define.
+	(init_cacheinfo): Initialize it.
+	* sysdeps/x86_64/memset.S: Use __x86_64_shared_cache_size.
+	Always define bzero.
+	Remove non-glibc code.
+	* sysdeps/x86_64/bzero.S: Make an empty file.
+
+2007-10-15  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* sysdeps/x86_64/cacheinfo.c
+	(__x86_64_preferred_memory_instruction): New.
+	(init_cacheinfo): Initialize __x86_64_preferred_memory_instruction.
+
+	* sysdeps/x86_64/memset.S: Rewrite.
+
+2007-10-15  Roland McGrath  <roland@redhat.com>
+
+	* po/libc.pot: Regenerated.
+
+2007-10-15  Ulrich Drepper  <drepper@redhat.com>
+
+	* nss/getXXbyYY_r.c (REENTRANT_NAME): Mangle startp and start_fct
+	pointers.
+
+	[BZ #3425]
+	* resolv/nss_dns/dns-host.c (getanswer_r): Fail with
+	NSS_STATUS_NOTFOUND if the server replied with only a CNAME and no
+	address record to T_A/T_AAAA requests.
+
 2007-10-14  Ulrich Drepper  <drepper@redhat.com>
 
 	* posix/glob.c: Reimplement link_exists_p to use fstatat64.
