Import glibc-mainline for 2007-10-17

--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,30 @@
+2007-10-16  Ulrich Drepper  <drepper@redhat.com>
+
+	* time/tzfile.c (__tzfile_read): Help the compiler recognize
+	unreachable code on 32-bit machines.
+
+2007-10-16  Jakub Jelinek  <jakub@redhat.com>
+
+	[BZ #5184]
+	* time/strftime_l.c: Include stdbool.h.
+	(my_strftime): New wrapper, old function renamed to...
+	(__strftime_internal): ... new function.  Add tzset_called
+	argument, pass it down to recursive calls, don't call tzset ()
+	if already true, set to true after call to tzset ().
+						
+2007-10-16  Ulrich Drepper  <drepper@redhat.com>
+
+	* time/tzfile.c (__tzfile_read): Take extra memory requested by caller
+	into account when copying TZ string.
+
+2007-10-16  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/x86_64/memset.S (memset): Fix sse2_nt_move
+	PIC indirect jump.
+
+	* sysdeps/x86_64/memset.S: Jump from bzero to memset using
+	a local label rather than HIDDEN_JUMPTARGET.
+
 2007-10-15  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/x86_64/cacheinfo.c (__x86_64_shared_cache_size): Define.
