--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,31 @@
+2007-10-27  Andreas Jaeger  <aj@suse.de>
+
+	[BZ #5040]
+	* sysdeps/unix/sysv/linux/sys/epoll.h (EPOLLRDHUP): Add value.
+
+	[BZ #3112]
+	* sysdeps/ia64/backtrace.c (init): Free shared library if incorrect.
+	(__cleanup): Free shared library when exiting.
+	* sysdeps/i386/backtrace.c (init): Free shared library if incorrect.
+	(__cleanup): Free shared library when exiting.
+
+2006-04-14  H.J. Lu  <hongjiu.lu@intel.com>
+
+	[BZ #2549]
+	* math/libm-test.inc (check_float_internal): Support
+	denormalized return.
+
+2007-10-23  Andreas Jaeger  <aj@suse.de>
+
+	[BZ #5208]
+	* sysdeps/unix/sysv/linux/readahead.c (__readahead): Use
+	__LONG_LONG_PAIR to handle little endian byte order.
+	Suggested by abhishekrai@google.com
+
+2007-10-27  Ulrich Drepper  <drepper@redhat.com>
+
+	* malloc/arena.c [!NO_THREADS]: Use ATFORK_MEM if defined.
+
 2007-10-26  Ulrich Drepper  <drepper@redhat.com>
 
 	* nscd/cache.c (prune_cache): Move test for modified file outside
