--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,19 @@
+2007-10-28  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #5204]
+	* crypt/sha256c-test.c: Define TIMEOUT to 6 for ancient hardware.
+	* crypt/sha512c-test.c: Likewise.
+
+	[BZ #5225]
+	* stdio-common/vfscanf.c (_IO_vfwscanf): Don't misuse wp pointer
+	to keep track of end of %[ format string element.
+	* stdio-common/Makefile (tests): Add bug20.
+	* stdio-common/bug20.c: New file.
+
+	[BZ #5222]
+	* elf/dl-load.c (_dl_rtld_di_serinfo): Correct handling of short
+	path elements in counting mode.
+
 2007-10-27  Andreas Jaeger  <aj@suse.de>
 
 	[BZ #5040]
